--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Cara o Cruz</string>
+    <string name="texto_boton">Tira la moneda</string>
+    <string name="txt_cara">Cara</string>
+    <string name="txt_cruz">Cruz</string>
 </resources>
